<resources>
    <string name="app_name">ComApplication</string>
    <string name="username_hint">Email</string>
    <string name="password_hint">Mot de passe</string>
    <string name="login_button_text">Se connecter</string>
    <string name="nom">Nom</string>
    <string name="prenom">Prénom</string>
    <string name="register">S\'inscrire</string>
    <string name="update">modifier</string>
    <string name="description">Description</string>
    <string name="datededebut">Date de debut</string>
    <string name="datedefin">Date de fin</string>
    <string name="nombredeparticipant">Nombre de participants</string>
    <string name="email">email</string>
    <string name="password">password</string>
    <string name="date_debut">"date de debut "</string>
    <string name="date_fin">Date de fin</string>
    <string name="nombre_participants">Nombre de participants</string>
    <string name="s_inscrire">S\'inscrire</string>
    <string name="Nombre_participants">\tNombre de Participants\n</string>

</resources>