<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:gravity="center">  <!-- Centre le contenu verticalement et horizontalement -->

    <EditText
        android:id="@+id/editTextDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/description"
        android:inputType="text"/>

    <EditText
        android:id="@+id/editTextDateDebut"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/date_debut"
        android:inputType="date"/>

    <EditText
        android:id="@+id/editTextDateFin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/date_fin"
        android:inputType="date"/>

    <EditText
        android:id="@+id/editTextNombreParticipants"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/nombre_participants"
        android:inputType="number"/>

    <Button
        android:id="@+id/buttonUpdate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/update"
        android:layout_marginTop="16dp"
        android:layout_gravity="center_horizontal"/>  <!-- Centre le bouton horizontalement -->

</LinearLayout>