<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="8dp">

    <TextView
        android:id="@+id/textViewCompetitionDescription"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/description" />

    <TextView
        android:id="@+id/textViewDateDebut"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/datededebut" />

    <TextView
        android:id="@+id/textViewDateFin"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/datedefin" />

    <TextView
        android:id="@+id/textViewNombreParticipants"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/nombredeparticipant" />

    <ImageView
        android:id="@+id/imageViewEdit"
        android:layout_width="40dp"
        android:layout_height="22dp"
        android:src="@drawable/edit_svgrepo_com" />

    <ImageView
        android:id="@+id/imageViewDelete"
        android:layout_width="39dp"
        android:layout_height="24dp"
        android:src="@drawable/trash_bin_trash_svgrepo_com" />
</LinearLayout>